# prbe-codex-tap-plugin

./: .gitignore  README.md
.claude-plugin/: marketplace.json
plugins/prbe-codex-tap-plugin/: README.md  pyproject.toml
plugins/prbe-codex-tap-plugin/.codex-plugin/: plugin.json
plugins/prbe-codex-tap-plugin/hooks/: hooks.json  session-start.sh
plugins/prbe-codex-tap-plugin/tap/: __init__.py  __main__.py  config.py  httpclient.py  killswitch.py  main.py  outbox.py  pair.py  revoke.py  sanitize.py  status.py  storage.py
plugins/prbe-codex-tap-plugin/tests/: test_batch_seq_persist.py  test_cadence.py  test_killswitch.py  test_lifecycle.py  test_pair_repair.py  test_sanitize.py
plugins/prbe-codex-tap-plugin/tests/fixtures/: rollout-sample.jsonl
